# lab

./: README.md
Bash/: BackupSource.sh  MonitorAlert.sh  UserMod.sh  cdfparser.sh  installfavs.sh  parse1.txt  two_fer.sh
JS/: README.md  build-javascript-objects.txt  comment-your-javascript-code.txt  count-backwards-with-a-for-loop.txt  counting-cards.txt  generate-random-fractions-with-javascript.txt  generate-random-whole-numbers-with-javascript.txt  generate-random-whole-numbers-within-a-range.txt  golf-code.txt  iterate-odd-numbers-with-a-for-loop.txt  iterate-through-an-array-with-a-for-loop.txt  manipulating-complex-objects.txt  record-collection.txt  return-early-pattern-for-functions.txt  returning-boolean-values-from-functions.txt  testing-objects-for-properties.txt  using-objects-for-lookups.txt  var.js
Julia/: 3SystemMetrics.jl  Grades.jl  MAP4C-U3-A1.jl  MathBasics.jl
Kickstart/: ts.ks
Kubernetes/: Notes.md  kubeapi.md
Nvim/: Notes
Perl/: DecodeUrl.pl  note
Python/: 10_exercise_10_2.py  11_regular_expression.py  12_Following_Links_in_Python.py  12_Scraping_HTML_Data_BeautifulSoup.py  12_request_response_cycle.py  13_Extract_Data_from_JSON.py  13_Extracting_Data_from_XML.py  13_Using_the_GeoJSON_API.py  15_Many_Students_in_Many_Courses.py  15_create_emaildb.py  15_create_orgdb.py  15_tracks.py  1_hello_world.py  2_exercise_2_3.py  3_exercise_3_1.py  3_exercise_3_3.py  4_exercise_4_6.py  5_exercise_5_2.py  6_exercise_6_5.py  7_exercise_7_2.py  (+5 more)
Rust/rse1/: Cargo.toml  flash.sh  memory.x
Rust/rse1/.cargo/: config.toml
Rust/rse1/src/: main.rs
(+80 files in other folders)
