[package]
name = "rse1"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"         # Runtime support (entry point, vectors)
cortex-m = "0.7.7"            # Cortex-M peripheral access (delay, asm)
rp2040-hal = { version = "0.9.0", features = ["critical-section-impl"] }
embedded-hal = "0.2.7"        # Traits for embedded drivers
panic-halt = "0.2.0"          # Panic behavior (halt forever)

[profile.release]
codegen-units = 1
lto = true
debug = true